# FiloDB

./: .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  RUN-ON-DOCKER.md  build.sbt  ddl.cql  debug-notes  dev-gateway.sh  docker-compose.yml  filo-cli  filodb-dev-start-docker.sh  filodb-dev-start.sh  filodb-dev-stop.sh  rio.yml  run_benchmarks.sh  scalastyle-config.xml  scalastyle-test-config.xml  switch-to-jdk17.sh  switch-to-jdk21.sh  version.sbt
.bsp/: sbt.json
.github/: COMMIT_TEMPLATE  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE
.old.idea/: .name  compiler.xml  modules.xml  sbt.xml  scala_compiler.xml
.scala-build/: .scalafmt.conf
conf/: downsample-filodb-server.conf  downsampler-dev-log4j.properties  histogram-dev-source.conf  logback-dev.xml  logback-perf.xml  promperf-filodb-server.conf  promperf-source.conf  telegraf-dev1.conf  telegraf-dev2-aci-telemetry.conf  telegraf-dev2.conf  telegraf.conf  timeseries-128shards-server.conf  timeseries-128shards-source.conf  timeseries-dev-buddy.conf  timeseries-dev-preagg-source.conf  timeseries-dev-source-docker.conf  timeseries-dev-source-ooo.conf  timeseries-dev-source.conf  (+8 more)
core/src/rust/filodb_core/: Cargo.toml
core/src/rust/filodb_core/src/: errors.rs  exec.rs  index.rs  ingestion.rs  lib.rs  parser.rs  profile.rs  query.rs  query_parser.rs  reader.rs  simd_vectors.rs  state.rs
core/src/rust/filodb_core/src/ingestion/: fields.rs
core/src/rust/filodb_core/src/query/: cachable_query.rs  filodb_query.rs
core/src/rust/filodb_core/src/query_parser/: filodb_query.rs
doc/: FAQ.md  (+22 more)
(+1374 files in other folders)
