[package]
name = "filodb_core"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
crate-type = ["cdylib"]

[dependencies]
dhat = "0.3.3"
filesize = "0.2.0"
hashbrown = "0.14.5"
jni = "0.21.1"
nohash-hasher = "0.2.0"
nom = "7.1.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
quick_cache = { version = "0.6.2", features = ["stats"] }
regex = "1.10.5"
tantivy = "0.24.1"
tantivy-common = "0.9.0"
tantivy-fst = "0.5.0"
tantivy_utils = { path = "../tantivy_utils" }
thiserror = "1.0.62"

[dev-dependencies]
bytes = "1.6.1"

[features]
dhat-heap = []
